Change History
**************

(name of developer listed in brackets)

1.3 (unreleased)
================
- Added a logger to log the value of a particular key for all items. Handy
  when debugging, you can see which path is failing, and good if you want
  to show progress in a long import.
  [regebro]

1.2 (2010-03-30)
================

- Bug fix: the constructor promises to encode paths to ASCII, but failed to
  do so. Thanks to gyst for finding the discrepancy.
  [mj]

1.1 (2010-03-17)
================

- Allow the CSV source to load its file from a package as well as from an
  absolute or relative file path. To load from a package, pass
  ``package.name:filename.csv`` to the ``filename`` option.
  [optilude]

- Add CMF 2.2/Plone 4 compatibility for the content constructor
  [optilude]

- Use an explicit provides attribute to register the transmogrifier adapter.
  Fixes the "Missing 'provides' attribute" errors when loading with
  zope.annotation installed.
  [mj]

- Add a required flag to the content constructor, which causes it to raise
  a KeyError if the container where to construct the new item doesn't exist.
  [regebro]

- Add an optional condition to the manipulator section.
  [regebro]

1.0 (2009-08-07)
================

- Initial transmogrifier architecture.
  [mj]